--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,3 +11,32 @@
     </nav>
   </div><!-- end header -->
 </header>
+
+<style>
+  #header {
+    z-index: 100;
+    left: 0;
+    top: 0px;
+    height: 60px;
+    width: 100%;
+    position: fixed;
+    background: #Add;
+    border-bottom: 4px solid #Add;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
+  }
+
+  #header nav ul li a {
+    color: white;
+    border: 1px solid #009688;
+    background: linear-gradient(#4CAF50, #009688);
+    border-radius: 2px;
+    box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3), 0px 3px 7px rgba(0, 0, 0, 0.7);
+    background-color: #93bd20;
+    padding: 10px 12px;
+    margin-top: 6px;
+    line-height: 14px;
+    font-size: 14px;
+    display: inline-block;
+    text-align: center;
+}
+</style>
