--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,5 +18,40 @@
   </div>
 </body>
 
+<style>
+  body {
+    padding: 0px 0 20px 0px;
+    margin: 0px;
+    font: 14px/1.5 "OpenSansRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #000000;
+    font-weight: normal;
+    /* background: #252525; */
+    background-attachment: fixed !important;
+    background: linear-gradient(#Add, #F3CFC6);
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    color: #3aaa1c;
+    margin: 0 0 10px;
+    font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: normal;
+  }
+
+  a {
+    color: #009eff;
+    font-weight: 400;
+    text-decoration: none;
+ }
+
+ th {
+    text-align: left;
+    padding: 5px 10px;
+    border-bottom: 1px solid #434343;
+    color: #000000;
+    font-family: 'OpenSansSemibold', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+    font-weight: normal;
+ }
+
+</style>
 
 </html>
