some mild fixes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,4 +39,8 @@
     display: inline-block;
     text-align: center;
 }
+  #header nav ul li a:hover {
+    background: linear-gradient(rgb(221, 170, 215), #F3CFC6); /* Color change on hover */
+    color: black; /* Text color change on hover */
+  }
 </style>
