--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -44,7 +44,7 @@ Load all posts with site
     <th>Week</th>
     <th>Plans</th>
     <th>Hacks(Todo)</th>
-    <th>Tangibles</th>
+    <th>Lab Notebook</th>
   </tr>
 
   {%comment%} 
