--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
 
 {% seo %}
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+  <!-- <link rel="stylesheet" type="text/css" href="/assets/css/cursor.css"> -->
   <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 {% if site.remote_theme contains 'midnight' %}
   <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
