--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,11 @@
     font-weight: normal;
     /* background: #252525; */
     background-attachment: fixed !important;
-    background: linear-gradient(#Add, #F3CFC6);
-    cursor: url('/assets/images/bullet.png'), auto;
+    background: linear-gradient(#Add, #F3CFC6)
+  }
+
+  html{
+    cursor: url('mort.cur'), auto;
   }
 
   h1, h2, h3, h4, h5, h6 {
