--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 
   <div id="header">
-    <img src="!{{site.baseurl}}/ufo.png" alt="Floating Image" class="floating-image">
+    <img src="ufo.png" alt="Floating Image" class="floating-image">
     <nav>
       <ul>
         <li class="fork"><a href="{{site.baseurl}}/">Home</a></li>
