--- a/_includes/nbaheader.html
+++ b/_includes/nbaheader.html
@@ -1,7 +1,10 @@
 <header class="site-header">
 
     <div id="header">
-      <img src="nba.png" alt="Floating Image" class="floating-image">
+        <div class="floating-image-container">
+            <img src="https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/nba.png" height="100" alt="Floating Image" class="floating-image">
+            <span class="image-label">NBA API and Analysis</span>
+        </div>
       <nav>
         <ul>
           <li class="fork"><a href="{{site.baseurl}}/2024/01/17/signin.html">Sign In</a></li>
@@ -63,13 +66,19 @@
   
     #header .floating-image {
       position: absolute;
-      top: 50%;
+      top: 75%;
       left: 100px;
       transform: translate(0, -50%);
       max-width: 250px;
       max-height: 125px;
       animation: float 2s infinite alternate;
     }
+
+    #header .image-label {
+    margin-left: -300px; /* Adjust margin as needed */
+    font-size: 14px;
+    color: black; /* Adjust color as needed */
+  }
   
     @keyframes float {
       0% {
